Bug 1596494 - Call UpdateCompositionBoundsForRCDRSF only if we are in the top level content document. r=tnikkel

Though there is another call site of UpdateCompositionBoundsForRCDRSF in
nsLayoutUtils::CalculateRootCompositionSize, it's not clear to me whether it is
necessary or not since we early return from the function in the case where
|aIsRootContentDocRootScrollFrame| argument is true. We will audit it later
in bug 1562505.

Differential Revision: https://phabricator.services.mozilla.com/D53117

--HG--
extra : moz-landing-system : lando